--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,19 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".ui.models.SignInActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.models.SignUpActivity"
+            android:exported="false">
         </activity>
     </application>
 
